--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Hello World!</h1>
         <p>I am Teo.</p>
+        <img src="images/breaching_whale.jpg">
     </body>
 </html>
