--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <a href="about.html">About this project</a>
         <p>I am Teo.</p>
         <img src="images/breaching_whale.jpg">
     </body>
